css/style.css
body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;   
}

header{
    height: 60%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

/*  Menu Bienvenida */

.inicio{
    height: 100vh;
    background: linear-gradient(90deg, 
                                rgba(0,0,0,0.5),
                                rgba(0,0,0,0.5)),
                                url('../assets/images/codigo_html.jpg');
    
    background-size: cover;
    background-position: center;

    display: flex;
    flex-direction: column;
}

.icono img{
    margin: 25px auto;
    width: 150px;
    height: 65px;
    display: flex;
    backdrop-filter: blur(5px);
    border-radius: 15px;
}

header nav{
    margin: 30px auto;
    padding: 10px;
    display: flex;
    flex-direction: column;

    backdrop-filter: blur(10px);
    border-radius: 15px;
}

header nav a{
    margin: 10px;
    text-decoration: none;
    color: whitesmoke;
    font-weight: 100;
    font-size: 1.4rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;

    cursor: pointer;
}

.comprarTickets{
    color: orange;
}

/*  Section Bienvenida  */

main{
    display: flex;
    align-items: center;
    height: 40%;
}

main section{
    margin: auto;
    width: 90%;
    color: whitesmoke;
    display: flex;
    flex-direction: column;
    align-items: center;
    backdrop-filter: blur(10px);
    border-radius: 15px;
}

main section h1{
    font-weight: 700;
    font-size: 1.6rem;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

main section h2{
    margin: 0px;
    display: inline;
    font: lighter;
    font-size: large;
    font-weight: 100;
    font-size: 1.4rem;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

main section .titleColor{
    color: orange;
}

main section p{
    text-align: center;
    font-weight: 100;
    font-size: 1.1rem;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}



/*  Contenidos del Programa */

.contenidosPrograma {
    width: 100vw;
    height: 100vh;
    margin: 20px auto;
    padding: 0 10px;
    max-width: 95vw;
    text-align: center;
    align-items: center;

    background-color: whitesmoke;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.contenidosPrograma h2 h3{
    font-weight: bold;
}

.contenidosPrograma h2{
    font-size: 1.4rem;
}

.contenidosPrograma h3{
    text-align: left;
    font-size: 1.2rem;
}

.contenidosPrograma ul{
    text-align: left;
    list-style-type: square;
}

.contenidosPrograma ul li{
    max-width: 80vw;
    font-size: 1rem;
}

.contenidosPrograma p{
    font-size: 1rem;
}



/*  Modalidad y Requisitos  */

.modalidadRequisitos{
    display: flex;
    flex-direction: column;
    height: 200vh;
    background-color: rgb(17, 17, 26);
    text-align: center;
}

.modalidadRequisitos div{
    width: 80vw;
    height: 90vh;
    margin: 10px auto;
    padding: 5px;
    background-color: aliceblue;
}

.modalidadRequisitos h2{
    font-weight: bold;
    font-size: 1.4rem;
    color: orange;
}

.modalidadRequisitos img{
    width: 90%;
}

.modalidadRequisitos ul{
    margin: 0;
    padding: 2px;;
    text-align: left;
    list-style-type: none;
}

.modalidadRequisitos li{
    margin: 15px;
    font-size: 1.1rem;
}



/*  Inscripciones   */


.inscripciones{
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    margin: auto;
    text-align: center;
}

.inscripciones h3{
    margin-bottom: 40px;
    font-weight: bold;
    font-size: 1.4rem;
}

.divInscripciones{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.inscripciones p{
    text-align: center;
    font-size: 1.05rem;
}

.inscripciones div{
    height: 50vh;
    padding: 10px;
}

.divFormulario{
    background-color: orange;
    display: flex;
    align-items: center;
    justify-content: center;
}

.divFormulario form{
    width: 90%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.divFormulario input, button{
    margin: 10px;
    width: 90%;
    height: 5vh;
    border-radius: 3px;
    box-sizing: border-box;
}

.btnEnviar{
    background-color: black;
    color: whitesmoke;
}



/*  Entrega de Diplomas*/

.diplomas{
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    align-items: center;

    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.divImgDiplomas , .divTextDiplomas{ 
    height: 50vh;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.divImgDiplomas img{
    width: 95%;
    height: 95%;
}

.divTextDiplomas h2{
    font-size: 1.4rem;
    font-weight: 700;
}

.divTextDiplomas p{
    font-size: 1.1rem;
    font-weight: 500;
}



/*  Footer  */

footer{
    width: 100vw;
    height: 50vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;

    background: linear-gradient(90deg, 
                                rgba(0,0,0,0.5),
                                rgba(0,0,0,0.5)),
                                url('../assets/images/codigo_html.jpg');
    background-size: cover;
    background-position: center;
}

footer img{
    margin-top: 20px;
    width: 150px;
    height: 65px;
}

footer a{
    display: flex;
    flex-direction: column;
}

footer a img{
    width: 32px;
    height: 32px;
}

